--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@originjs/vite-plugin-federation": "^1.4.1",
     "@tanstack/react-query": "^5.90.2",
     "@vitejs/plugin-react": "^5.0.3",
+    "appwrite": "^21.0.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1"
